# Python-Rust-AI-Train-Inference

./: .gitignore  Cargo.toml  README.md  justfile  requirements.txt
lightning/cnn/: inference.rs  train.py
lightning/fnn/: inference.rs  train.py
lightning/rnn/: inference.rs  train.py
perceptron/: inference.rs  train.py
scikit-learn/classification/: inference.rs  train.py
scikit-learn/clustering/: inference.rs  train.py
scikit-learn/dimensionality-reduction/: inference.rs  train.py
scikit-learn/regression/: inference.rs  train.py
src/: lib.rs
tensorflow/cnn/: inference.rs  train.py
tensorflow/gan/: inference.rs  train.py
tensorflow/lstm/: inference.rs  train.py
tensorflow/mlp/: inference.rs  train.py
tensorflow/rnn/: inference.rs  train.py
